<resources>
    <string name="app_name">COVID-Details</string>
    <string name="login_text">Login</string>
    <string name="username_loginPage">UserName</string>
    <string name="password_loginPage">Password</string>
    <string name="login_logPage">Login</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="enter_the_details_scrren2">Enter the Details</string>
    <string name="name_Screen2">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="email_Details">Email</string>
    <string name="covid_confirm_date">COVID-Confirm Date</string>
    <string name="date_of_hospital_admission">Date of Hospital Admission</string>
    <string name="date_of_discharge">Date of Discharge</string>
    <string name="i_agree_that_the_information_provided_is_correct">I agree that the information provided is correct</string>
    <string name="enter_page2">Enter</string>
    <string name="enter_the_details_Screen3">Enter the Details</string>
    <string name="aadharcard_number">AadharCard Number</string>
    <string name="dose_1_vaccination_date">Dose 1: Vaccination Date</string>
    <string name="dose_2_vaccination_date">Dose 2: Vaccination Date</string>
    <string name="vaccination_name">Vaccination Name</string>
    <string name="enter_screen3">Enter</string>
    <string name="age">Age</string>
    <string name="gender_s2">Gender</string>
    <string name="pname">Name</string>
    <string name="pemail">Email</string>
    <string name="page">Age</string>
    <string name="pphone_number">Phone Number</string>
    <string name="pgender">Gender</string>
    <string name="paddress">Address</string>
    <string name="pcovid_confirm_date">COVID-Confirm Date</string>
    <string name="pdate_of_admission">Date Of Admission</string>
    <string name="pdischarge_date">Discharge Date</string>
    <string name="updateS2">UPDATE</string>
    <string name="details">Details</string>
    <string name="person_name">Person Name</string>
    <string name="person_email">Person Email</string>
    <string name="person_age">Person Age</string>
    <string name="person_gender">Person Gender</string>
    <string name="person_mobile_number">Person Mobile Number</string>
    <string name="person_address">Person Address</string>
    <string name="person_confirm_date">Person Confirm Date</string>
    <string name="person_admission_date">Person Admission Date</string>
    <string name="person_dishcharge_date">Person Dishcharge Date</string>
    <string name="back">Back</string>
    <string name="phone_number">Phone Number</string>
    <string name="person_aadhar_number">Person Aadhar Number</string>
    <string name="person_vaccine_name">Person Vaccine Name</string>
    <string name="person_1st_dose_date">Person 1st Dose Date</string>
    <string name="person_2nd_dose_date">Person 2nd Dose Date</string>
    <string name="age_details">Age:</string>
</resources>