<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
xmlns:android="http://schemas.android.com/apk/res/android"
tools:context=".Screen3Details"
android:orientation="vertical"
android:layout_height="wrap_content"
android:layout_width="match_parent"
android:layout_margin="20dp"
    >


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:id="@+id/scroll">



    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_details_Screen3"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:id="@+id/head"
            android:gravity="center"
            android:textColor="@color/black"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/aadharcard_number"
                android:layout_marginTop="10dp"
                android:id="@+id/AadharNo"
                android:inputType="text"
                android:autofillHints="no" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dose_1_vaccination_date"
                android:layout_marginTop="10dp"
                android:id="@+id/Dose1"
                android:inputType="date"
                android:autofillHints="no" />


         <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dose_2_vaccination_date"
                android:layout_marginTop="10dp"
                android:id="@+id/Dose2"
                android:inputType="date" />


           <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vaccination_name"
                android:layout_marginTop="10dp"
                android:id="@+id/VName"
                android:inputType="text" />


        <CheckBox
            android:id="@+id/check2"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_agree_that_the_information_provided_is_correct"/>

        <Button
            android:id="@+id/Enter2"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_screen3"
            android:textColor="#000000"/>


    </LinearLayout>

</ScrollView>


</RelativeLayout>